2014-07-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c: Added SetLogMethod() to allow an
	application/library to specify a function to be called for
	logging.  Patch contributed by Dirk Lemstra.

2014-07-20  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/bmp.c: "opacity" read from a BMP3 is actually "alpha",
	so store q->opacity=MaxRGB-opacity instead of q->opacity=opacity.
	Reference: Bug tracker [bugs:#271] Blank result for BMP resize.

2014-07-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* webp, VisualMagick/webp: Integrate webp 0.4.0 into windows
	build.  May require manual renaming of output object files in
	project files to build webp until VisualMagick configure is
	improved!

2014-07-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c: fmin() and fmax() are defined by C'99 and
	not available everywhere, so add and use MagickFmin() and
	MagickFmax() to improve portability.

2014-07-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Magick++/Image.h (Magick): Fix complilation errors
	caused by continued raw use of __attribute__.

2014-06-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c: Fixes by Brendan Lane for color channel
	overflows in modified/new quantum operators.  Fixes test suite
	results for Q32 build and makes LinearBurn and LinearDodge work
	correctly at all.

	* wand/pixel_wand.c (PixelSetMagenta): Fix documentation.
	Resolves SourceForge bug #273 'Green Magenta' typo in docs.

2014-06-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c: Composition improvements and additions
	contributed by Brendan Lane via SourceForge patch #34 "Most of the
	missing Photoshop separable compositing operations"
	(https://sourceforge.net/p/graphicsmagick/patches/34/).  These
	composition operators were modified to include alpha in their
	computations: Difference, Darken, Lighten, HardLight, and these