@@ -200,6 +200,9 @@
 // Optional: Specify where operating system specific files are installed
 // #define MagickLibPath       "c:\\GraphicsMagick\\"
 
+// Optional: Specify name of the library that contains the mgk resource files
+// #define MagickLibName       "MyGraphicsMagick.dll"
+
 // Optional: Specify where operating system independent files are installed
 // #define MagickSharePath     "c:\\GraphicsMagick\\"
 
