@@ -38,6 +38,9 @@
 <p>2014-07-27  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/nt_base.c (NTResourceToBlob): Support loading mgk files
+as Windows resource from library if MagickLibName is defined.
+Patch contributed by Dirk Lemstra via SF patch #32.</li>
 <li>magick/log.c: Added SetLogMethod() to allow an
 application/library to specify a function to be called for
 logging.  Patch contributed by Dirk Lemstra.</li>
